--- a/index.html
+++ b/index.html
@@ -4,67 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search"
-
-    <!-- Main Section [with search bar] -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Search</h1>
-                <form action="index.php" method="get">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="search" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Search</button>
-                </form>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Results</h1>
-
-            </div>
-        </div>
-
-    <!-- Media Section [insert the video placeholder here] -->
+    <body>
+        <!-- Navbar Section -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 fixed-top">
+            <div class="container"></div>
+        </nav>
     
-
-    <!-- Footer  -->
-
-
+        <!-- Hero Section -->
+        <section class="bg-dark text-light p-5 text-center text-sm-start pt-5 mt-5">
+            <div class="container"></div>
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div>
+                    <h1>Up-N-<span class="text-warning"> Coming</span></h1>
+                    <p class="lead my-4">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quo deserunt aut et odio. Incidunt doloremque deserunt aperiam sint, provident reiciendis, fugit deleniti doloribus exercitationem animi laudantium error! Quae, fugiat reiciendis ipsa illo optio sint omnis magnam officiis.
+                    </p>
+                    <!-- Optional Button below this box container
+                        <button class="btn btn-primary btn-lg">Reservation</button> -->
+                </div>
+                <!-- we can add an image here if you guys want -->
+                <img class="img-fluid w-50 d-none d-sm-block" src="" alt="">
+            </div>
+        </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
