Fixed spelling error in the header section's title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <form class="column control is-4 has-icons-right">
         <div class="field">
           <p class="control has-icons-right">
-            <input type="text" class="input" placeholder="Artist or Brand Name">
+            <input type="text" class="input" placeholder="Artist or Band Name">
             <span class="icon is-small is-right">
               <i class="fas fa-search"></i>
             </span>
