added a page with loading animation and updated the styles for the content of the page for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Up-N-Coming</title>
 </head>
-<body>
+<body>  
     <!-- Search Bar Section -->
-    <header class="is-flex is-flex-direction-column is-align-items-center horizontal-align">
+    <header class="hero is-flex is-flex-direction-column is-align-items-center horizontal-align">
       <h1 class="title is-size-2-mobile mt-2 mb-0">Up-N-Coming</h1>
       <form class="column control is-4 has-icons-right">
         <div class="field">
@@ -25,8 +25,21 @@
       </form>
     </header>
 
+    <!-- <section id="loading" class="center">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </section> -->
+
     <!-- <header class="has-background-grey-lighter is-flex is-flex-direction-column is-align-items-center">
-      <h1 class="title is-1 mt-2 mb-0">Up-N-Coming</h1>
+      <h1 class="title is-size-2-mobile mt-2 mb-0">Up-N-Coming</h1>
       <form class="column control is-4 has-icons-right">
         <div class="field">
           <p class="control has-icons-right">
@@ -37,13 +50,13 @@
           </p>
         </div>
       </form>
-    </header>   -->
+    </header>  
 
-    <!-- <main class="mt-0">
-        Searched Artist Name and Desction Hero 
+    <main>
+        Searched Artist Name and Description Hero 
         <section class="hero has-background-info" id="searchArtist">
-            <div class="hero-body ">
-                <p class="title">
+            <div class="hero-body is-flex is-flex-direction-column is-align-items-center">
+                <p class="title is-size-3-mobile">
                   Artist Name
                 </p>
                 <p class="subtitle">
@@ -53,8 +66,9 @@
         </section>
 
         Recommendations
-        <section id="recommendations my-5 columns tile is-ancestor">
-            <div class="card column is-parent is-4">
+        <section id="recommendations" class="has-background-grey-lighter pt-5 columns tile is-ancestor is-flex is-flex-direction-column is-align-items-center">
+            <h2 class="title is-size-4-mobile">Similar Artists</h2>
+            <div class="card column is-parent is-full-mobile is-4-tablet mb-5">
                 <div class="card-image tile is-child box notification is-info box">
                     <p class="title">Artist # 1</p>
                     <p class="subtitle">Album/Genre</p>
@@ -85,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="card column is-parent is-4">
+            <div class="card column is-parent is-full-mobile is-4-tablet mb-5">
                 <div class="card-image tile is-child box notification is-info box">
                     <p class="title">Artist # 1</p>
                     <p class="subtitle">Album/Genre</p>
@@ -116,7 +130,7 @@
                 </div>
             </div>
 
-            <div class="card column is-parent is-4">
+            <div class="card column is-parent is-full-mobile is-4-tablet mb-5">
                 <div class="card-image tile is-child box notification is-info box">
                     <p class="title">Artist # 1</p>
                     <p class="subtitle">Album/Genre</p>
@@ -147,7 +161,7 @@
                 </div>
             </div>
 
-            <div class="card column is-parent is-4">
+            <div class="card column is-parent is-full-mobile is-4-tablet mb-5">
                 <div class="card-image tile is-child box notification is-info box">
                     <p class="title">Artist # 1</p>
                     <p class="subtitle">Album/Genre</p>
