added error handling for when the user presses enter on a blank search box

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           </p>
         </div>
       </form>
+      <div id="header-error-message"></div>
     </header>
 
   <section id="loading" class=""></section>
