--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Up-N-Coming</title>
+    <title>Undercurrents</title>
 </head>
 <body>   
   <!-- Search Bar Section -->
     <header id="landing" class="hero is-flex is-flex-direction-column is-align-items-center vertical-align">
-      <h1 class="title is-size-1-mobile mt-2 mb-0">Up-N-Coming</h1>
+      <h1 class="title is-size-1-mobile mt-2 mb-0">Undercurrents</h1>
       <form class="column control is-4 has-icons-right" id="search-form">
         <div class="field">
           <p class="control has-icons-right">
