fixed error messages / recommendations link on mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Search Bar Section -->
   <header id="landing" class="hero is-flex is-flex-direction-column is-align-items-center vertical-align">
     <h1 class="title is-size-1-mobile mt-2 mb-0">Undercurrents</h1>
-    <form class="column control is-4 has-icons-right" id="search-form">
+    <form class="column control is-4 has-icons-right has-text-centered" id="search-form">
       <div class="field">
         <p class="control has-icons-right">
           <input type="text" id="search-input" class="input" placeholder="Artist or Band Name">
@@ -22,9 +22,9 @@
           </span>
         </p>
       </div>
+      <a class="has-text-dark" href="#history">See Past Recommendations</a>
+      <div id="header-error-message"></div>
     </form>
-    <a class="has-text-dark" href="#history">See Past Recommendations</a>
-    <div id="header-error-message"></div>
   </header>
 
   <section id="loading" class=""></section>
