--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Undercurrents</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Undercurrents</h1>
+    </header>
+
+   <!--Search bar-->
+   
+    <!--Nav bar-->
+   
+   <!--Media section-->
+
+   <!--Custom Script-->
+   <script src=“./assets/js/script.js”></script>
 </body>
 </html>
